--- a/src/social-frontend/src/styles/Components/_form.scss
+++ b/src/social-frontend/src/styles/Components/_form.scss
@@ -1,10 +1,12 @@
+@use "../colors";
+
 .form {
   display: flex;
   width: 25%;
-  min-width: 200px;
+  min-width: 300px;
   flex-direction: column;
   align-items: center;
-  border: 2px solid #eee;
+  border: 2px solid colors.$border;
   border-radius: 10px;
   padding: 40px;
 }
@@ -15,7 +17,7 @@
   align-items: flex-start;
   .form-error {
     font-size: 0.8em;
-    color: red;
+    color: colors.$error;
   }
 }
 
@@ -24,7 +26,7 @@
   width: 100%;
   padding: 10px;
   border-radius: 7px;
-  border: 1px solid #eee;
+  border: 1px solid colors.$border;
 }
 
 .submit {
