--- a/src/battleships/game-app-mui/src/components/components.css
+++ b/src/battleships/game-app-mui/src/components/components.css
@@ -27,8 +27,22 @@
     box-sizing: border-box;
     text-align: center;
     line-height: 34px;
+    position: relative;
 }
 
 .MyBoardShipSquare{
     background-color:rgb(120, 136, 159);
 }
+
+.dot {
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    height: 10px;
+    width: 10px;
+    background-color: rgb(120, 136, 159);
+    border-radius: 50%;
+    display: inline;
+    line-height: 34px;
+    text-align: center;
+  }
