feature/18-battleships add SunkShipSquare

--- a/src/battleships/game-app-mui/src/components/components.css
+++ b/src/battleships/game-app-mui/src/components/components.css
@@ -33,6 +33,9 @@
 .MyBoardShipSquare{
     background-color:rgb(120, 136, 159);
 }
+.SunkShipSquare {
+    background-color:rgb(120, 136, 159);
+}
 
 .dot {
     position: absolute;
@@ -48,9 +51,9 @@
   }
 
   .cross {
-    color: rgb(120, 136, 159);
+    color: red;
     display: inline-block;
   content: "\00d7";
-    font-size: 30px;
+    font-size: 50px;
     font-family: Arial, sans-serif;
  }
