--- a/src/social-frontend/src/styles/main.scss
+++ b/src/social-frontend/src/styles/main.scss
@@ -5,18 +5,6 @@ body {
   height: 100%;
   box-sizing: border-box;
   scrollbar-gutter: stable;
+  overflow-y: auto;
   overflow-x: hidden;
-}
-
-::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1);
-}
-
-::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.5);
 }
